  objects available from the `NewDeliverer` method.

Bug Handling
------------

* Reset header when discarding valid but oversized messages (#1221).

* Prevent the protobuf stream encoder from creating messages over
  MAX_MESSAGE_SIZE (#1204).

* AMQPOutput now uses defined constants for delivery mode instead of hard
  coded (and wrong) integer values (#1235).

Features
--------

* Allow the sandbox process_message function to set the last error string
  when it returns (#1191).

* Improve the sandbox inject_* error messages (#1156).

* Added ability to specify unit type and aggregation methods for stats graph
  filter.

* Added option (immediate_start) to start process immediately in ProcessInput
  (#1131).

* Added `hostname` setting to global `[hekad]` config options to allow
  overriding the hostname value provided by Go's `os.Hostname` call (#1123).

* Added 'connect_timeout' option in ElasticSearch output plugin.

* Slightly improve error output in ElasticSearch plugin.

* Added support for HTTP authentication to ElasticSearchOutput.

* TcpOutput's disk buffering now supports specification of a max buffer size
  and an action to take if the max size is reached, from 'shutdown', 'drop',
  or 'block' (#1110).

* Added `unescape_body` option to HttpListenInput to allow users to turn off
  unescaping of the HTTP request body (#1124).

* Added `send_interval` setting to SmtpOutput.

* Added `timestamp` format setting to ESLogstashV0Encoder (#1142).

* LogstreamerInput now uses first two "magic" bytes to identify gzip files
  instead of relying on `.gz` suffix.

0.8.3 (2015-01-08)
==================

Bug Handling
------------

* Fixed LogstreamerInput to use a separate DecoderRunner for every
  LogstreamInput created, rather than sending all of the streams through a
  single decoder.

0.8.2 (2015-01-06)
==================

Bug Handling
------------

* Fix rsyslog sandbox decoder test to use current year and location for