@@ -30,6 +30,9 @@ Bug Handling
 * AMQPOutput now uses defined constants for delivery mode instead of hard
   coded (and wrong) integer values (#1235).
 
+* Hekad now respects --config parameter and loads default config path
+  instead of printing help and exit (#1239).
+
 Features
 --------
 
